# ml-and-stuff

./: .gitignore  README.md  Regression.ipynb  Untitled.ipynb  dimension_formation.ipynb  knn_vis.ipynb  svm.ipynb
ITMO/: README.md  util.py
ITMO/LinearRegression/: cost_functions.py  dataset.py  main.py  optimization_method.py  regression.py
ITMO/NaiveBayes/: BayesClassifier.py  Dataset.py  Metrics.py
ITMO/NewShinyNaiveBayes/: Metrics.py  classifier.py  main.py  reader.py
ITMO/SVM/: kernels.py  main.py  svm.py
ITMO/knn/: dataset.py  knn.py  main.py  statistics.py
ITMO/knn/functions/: distance.py  kernel.py
knn/: CMakeLists.txt  README.md  dataset.h  functions.h  kNN.h  kdTree.h  main.cpp  statistics.h
other/knn/: CMakeLists.txt  dataset.h  gnuplot-iostream.h  main.cpp  plotting.h
