cmake_minimum_required(VERSION 3.10)
project(knn)

set(CMAKE_CXX_STANDARD 14)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost REQUIRED COMPONENTS iostreams system filesystem)

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(knn main.cpp dataset.h functions.h kNN.h gnuplot-iostream.h plotting.h statistics.h)
    target_link_libraries(knn ${Boost_LIBRARIES})
else()
    add_executable(knn main.cpp dataset.h functions.h kNN.h statistics.h)
endif()